Fix menu spacings

--- a/source/assets/stylesheets/components/_site-navigation.scss
+++ b/source/assets/stylesheets/components/_site-navigation.scss
@@ -98,7 +98,7 @@
     .menu {
       list-style-type: none;
       margin: 0;
-      padding: 160px 0 0;
+      padding: 170px 0 0;
 
       @include grid-media($for-desktop-up) {
         display: flex;
@@ -122,7 +122,7 @@
         font-family: $heading-font-family;
         font-size: $base-font-size * 1.6;
         font-weight: $font-weight-small;
-        padding: 0 $base-spacing * 0.9;
+        padding: 10px $base-spacing * 0.9;
         text-decoration: none;
         text-transform: uppercase;
 
